[package]
name = "cross-chain-transfer"
version = "1.0.0"
authors = ["D9"]
edition = "2021"

[dependencies]
ink.workspace = true
chain-extension = { version = "^1.0.0", path = "../d9-core/chain-extension", default-features = false }
bs58 = { version = "0.5.0", default-features = false, optional = true }
scale.workspace = true

scale-info = { workspace = true, optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
ink_e2e = "4.2.0"
usdt = { version = "^1.0.0", path = "../tokens/usdt", default-features = false }
[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "chain-extension/std",
    "bs58/std",
    "hex/std",
]
ink-as-dependency = []
e2e-tests = []
