[package]
name = "d9-test-utils"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[profile.dev]
overflow-checks = false
[profile.bench]
overflow-checks = false
[profile.release]
overflow-checks = false
[profile.test]
overflow-checks = false

[dependencies]
ink = { version = "4.3.0", default-features = false }

d9-chain-extension = { version = "0.1.0", path = "../chain-extension", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
sp-arithmetic = { version = "19", default-features = false }
scale-info = { version = "2.9", default-features = false, features = [
   "derive",
], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "d9-chain-extension/std"]
ink-as-dependency = []
e2e-tests = []
