[package]
name = "d9burnmining"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[dependencies]
scale-info = { version = "2.3", default-features = false, features = [
   "derive",
], optional = true }

ink = { version = "4.2.0", default-features = false }
d9-chain-extension = { version = "0.1.0", path = "../d9-chain-extension" }
sp-arithmetic = { version = "16.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
[lib]
name = "d9referral"
path = "lib.rs"
crate-type = [
   # Used for normal contract Wasm blobs.
   "cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "sp-arithmetic/std"]
ink-as-dependency = []
