[package]
name = "mining_pool"
version = "1.0.0"
authors = ["D9"]
edition = "2021"

[dependencies]
d9-chain-extension = { version = "^1.0.0", path = "../chain-extension", default-features = false }
ink = { version = "4.3.0", default-features = false }
sp-arithmetic = { version = "19", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
], optional = true }
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "d9-chain-extension/std",
    "substrate-fixed/std",
]
ink-as-dependency = []
e2e-tests = []
