[package]
name = "node_reward"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
d9-chain-extension = { version = "0.1.0", path = "../chain-extension", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
sp-arithmetic = { version = "19", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
   "derive",
], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "d9-chain-extension/std"]
ink-as-dependency = []
e2e-tests = []
