[package]
name = "rewards-aggregator"
version = "1.1.0"
authors = ["D9"]
edition = "2021"

[dependencies]
chain-extension = { version = "^1.0.0", path = "../d9-core/chain-extension", default-features = false }
ink.workspace = true
sp-arithmetic.workspace = true
scale.workspace = true
scale-info = { workspace = true, optional = true }
substrate-fixed.workspace = true

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "chain-extension/std",
    "substrate-fixed/std",
]
ink-as-dependency = []
e2e-tests = []
