[package]
name = "d9-burn-common"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
d9-chain-extension = { version = "0.1.0", path = "../../chain-extension", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
   "derive",
], optional = true }

# [dev-dependencies]
# ink_e2e = "4.2.0"

[lib]
path = "lib.rs"


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "d9-chain-extension/std"]
ink-as-dependency = []
e2e-tests = []
