[package]
name = "d9-burn-common"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[dependencies]
scale-info = { version = "2.9", default-features = false, features = [
   "derive",
], optional = true }

d9-chain-extension = { version = "0.1.0", path = "../../d9-chain-extension", default-features = false }
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
