[package]
name = "d9-burn-mining"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
d9-burn-common = { version = "0.1.0", path = "../d9-burn-common", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
   "derive",
], optional = true }
sp-arithmetic = { version = "18", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
   "ink/std",
   "scale/std",
   "scale-info/std",
   "d9-burn-common/std",
   "sp-arithmetic/std",
]
ink-as-dependency = []
e2e-tests = []
