[package]
name = "d9-main"
version = "0.1.0"
authors = ["D9Dev"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
d9-chain-extension = { version = "0.1.0", path = "../../d9-chain-extension" }
d9-burn-common = { version = "0.1.0", path = "../d9-burn-common" }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
   "derive",
], optional = true }

[lib]
name = "d9_main"
path = "lib.rs"
crate-type = [
   # Used for normal contract Wasm blobs.
   "cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
