[package]
name = "usdt"
version = "1.0.0"
edition = "2021"
authors = ["D9"]


[dependencies]

ink.workspace = true

scale.workspace = true
scale-info = { workspace = true, optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { tag = "4.0.0-beta.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = [
   "psp22",
] }

[lib]
path = "lib.rs"


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
